fix(ui): Fit more text per line on mobile

--- a/app/core/static/core/css/style.css
+++ b/app/core/static/core/css/style.css
@@ -176,6 +176,10 @@ a::selection {
 }
 
 @media only screen and (max-width: 768px) {
+  html {
+    font-size: 80%;
+  }
+
   .navbar .nav-menu {
     position: fixed;
     left: -100%;
